# whatschat

./: .gitignore  README.md  TEST_REPORT.md  package.json  pnpm-lock.yaml  setup-dev.sh  start.sh  stop.sh  test-auth.js  turbo.json
.cursor/rules/: bdd-specification.mdc  business-challenges-solutions.mdc  clean-architecture.mdc  commit-convention.mdc  optimise-code.mdc  standard-solutions.mdc  styles.mdc  togaf-specification.mdc
.github/workflows/: ci.yml  coverage.yml  security.yml
.husky/: pre-commit  pre-push
apps/admin/: .gitignore  eslint.config.js  next.config.mjs  package.json  tsconfig.json
apps/image-gen/: app.py  requirements.txt
apps/media-gen/: README.md  (+1 more)
docs/: 01-system-context.puml  02-container-diagram.puml  03-component-diagram.puml  03-mobile-component-diagram.puml  04-code-diagram.puml  05-architecture-overview.puml  06-deployment-diagram.puml  README.md  aws-integration.md  documentation-structure.md
screenshots/: README.md
scripts/: setup-dev.sh  start.sh  stop.sh
services/rag/: .env.example  README.md  pyproject.toml  requirements.txt
services/rag/src/: __init__.py  config.py  main.py
services/rag/src/api/: __init__.py  deps.py
services/rag/src/api/routes/: crawler.py  documents.py  query.py  sync.py
services/rag/src/core/: __init__.py  chunker.py  document_processor.py  embedding.py  qdrant_client.py
services/rag/src/schemas/: __init__.py  common.py  document.py  query.py
services/rag/src/utils/: __init__.py  pdf_parser.py
services/rag/tests/: __init__.py  conftest.py  test_chunker.py  test_documents.py  test_query.py
(+1307 files in other folders)
