[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "whatschat-rag"
version = "1.0.0"
description = "RAG Service for WhatsChat"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "qdrant-client>=1.9.0",
    "ollama>=0.3.0",
    "openai>=1.12.0",
    "pymupdf>=1.23.0",
    "beautifulsoup4>=4.12.0",
    "html2text>=2024.2.0",
    "python-docx>=1.1.0",
    "markdown>=3.5.0",
    "aiofiles>=23.2.0",
    "redis>=5.0.0",
    "tenacity>=8.2.0",
    "tiktoken>=0.7.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100
